--- a/againstdeception/index.mjml
+++ b/againstdeception/index.mjml
@@ -63,7 +63,7 @@
           align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
-          font-size="16px"
+          font-size="14px"
           font-weight="400"
           letter-spacing="0.2px"
           line-height="1.4"
@@ -102,7 +102,7 @@
     </mj-section>
 
     <!-- text 02 -->
-    <mj-section background-color="#BE185D">
+    <mj-section background-color="#BE185D" padding="36px 0">
       <mj-column>
         <mj-image
           src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/02.jpg"
@@ -141,7 +141,7 @@
     <mj-section background-color="#F9FAFB">
       <mj-column>
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/01.jpg"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/03.jpg"
           alt=""
           padding="24px"
         />
@@ -150,7 +150,7 @@
           align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
-          font-size="16px"
+          font-size="14px"
           font-weight="400"
           letter-spacing="0.2px"
           line-height="1.4"
@@ -159,6 +159,123 @@
           Beautiful! The messages in the lyrics were so very relevant to our
           times. And you phrased them so poetically. And you looked like a
           philosopher/prophet. Out of this world, the visuals were fabulous!
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- waves 02 -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/universal/waves-02-pink-700.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- text 02 -->
+    <mj-section background-color="#BE185D" padding="36px 0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/04.jpg"
+          alt=""
+          padding="24px"
+        />
+
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          “I am working on electronic, hyperpop, Trance and car style music
+          which is something I don’t notice any Christian artists doing my music
+          is very bold and Truthful”, says Against Deception regarding the
+          release of her new album.
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- waves 01 -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/universal/waves-01-pink-700.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- message -->
+    <mj-section background-color="#F9FAFB">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="16px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          For more information about the artist,
+          <br />
+          Visit -
+          <a href="https://www.againstdeception.com"
+            >www.againstdeception.com</a
+          >
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- footer -->
+    <mj-section background-color="#BE185D">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="2"
+        >
+          Name:
+          <a
+            href="https://www.againstdeception.com"
+            style="text-decoration: none; color: #f9fafb"
+          >
+            Against Deception
+          </a>
+          <br />
+          Email:
+          <a
+            href="mailto:againstdeception1@gmail.com"
+            style="text-decoration: none; color: #f9fafb"
+          >
+            againstdeception1@gmail.com
+          </a>
+          <br />
+          Website:
+          <a
+            href="https://www.againstdeception.com/"
+            style="text-decoration: none; color: #f9fafb"
+          >
+            againstdeception.com
+          </a>
+          <br />
+          Contact:
+          <a
+            href="tel:(877) 404-7549"
+            style="text-decoration: none; color: #f9fafb"
+          >
+            (877) 404-7549
+          </a>
         </mj-text>
       </mj-column>
     </mj-section>
