--- a/againstdeception/index.mjml
+++ b/againstdeception/index.mjml
@@ -29,7 +29,7 @@
         <mj-image
           alt=""
           href="https://www.againstdeception.com/"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/Against Deception.webp"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/Against Deception.jpg"
           padding="0"
         />
       </mj-column>
