--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -8,16 +8,138 @@
     <!-- header -->
     <mj-section
       background-url="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/universal/white.png"
-      padding="0"
     >
       <mj-column>
         <mj-image
           alt=""
           href="https://www.againstdeception.com/"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/againstdeception/assets/logo.png"
-          width="300px"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/extra/pp/assets/ppc.webp"
+          width="216px"
           padding="0"
         />
+      </mj-column>
+    </mj-section>
+
+    <!-- order number and date -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="12px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Order # [order_number]
+          <br />
+          [day-month-date-year]
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- first name, last name and amount -->
+    <mj-section background-color="#F9FAFB">
+      <mj-column>
+        <mj-text
+          color="#F97316"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Hello [first_name] [last_name],
+        </mj-text>
+
+        <mj-text
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          The request for
+          <span style="font-weight: 600">
+            credit of [amount] has been approved
+          </span>
+          for the given purchase, and order has been dispatched. If you need any
+          help with your order call
+          <a
+            href="tel:+1-320-584-9066"
+            style="color: #27272a; font-weight: 600; text-decoration: none"
+            >+1-320-584-9066</a
+          >
+          .
+        </mj-text>
+
+        <mj-text
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          The package is being shipped, provided tracking number is
+          [tracking_number]. A signature may be required for the receiving of
+          the package.
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- shipment details -->
+    <mj-section background-color="#F9FAFB">
+      <mj-column>
+        <mj-text
+          color="#F97316"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Shipment Details
+        </mj-text>
+
+        <mj-image src="" alt="" />
+
+        <mj-text
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          The request for
+          <span style="font-weight: 600">
+            credit of [amount] has been approved
+          </span>
+          for the given purchase, and order has been dispatched. If you need any
+          help with your order call
+          <a
+            href="tel:+1-320-584-9066"
+            style="color: #27272a; font-weight: 600; text-decoration: none"
+            >+1-320-584-9066</a
+          >
+          .
+        </mj-text>
+
+        <mj-text
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          The package is being shipped, provided tracking number is
+          [tracking_number]. A signature may be required for the receiving of
+          the package.
+        </mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
