--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -13,7 +13,7 @@
         <mj-image
           alt=""
           href="https://www.againstdeception.com/"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/extra/pp/assets/ppc.webp"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/extra/pp/assets/ppc.png"
           width="216px"
           padding="0"
         />
