--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -172,7 +172,7 @@
           <a
             href="tel:+1-320-584-9066"
             style="
-              color: #f9fafb;
+              color: #22d3ee;
               font-size: 16px;
               font-weight: 600;
               text-decoration: none;
