--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -21,7 +21,7 @@
     </mj-section>
 
     <!-- order number and date -->
-    <mj-section background-color="#F9FAFB" padding="0">
+    <mj-section background-color="#F9FAFB">
       <mj-column>
         <mj-text
           align="center"
