--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -197,7 +197,7 @@
           This is a notification only email.<br />Please do not reply to it.<br /><br />
           <a
             alt="unsubscribe"
-            href="https://unsubscribeme.us"
+            href="mailto:unsubscribe@paypal.com"
             style="color: #27272a; font-weight: 400"
           >
             Unsubscribe me from furthur alerts
