--- a/extra/pp/01/index.mjml
+++ b/extra/pp/01/index.mjml
@@ -200,7 +200,7 @@
             href="mailto:unsubscribe@paypal.com"
             style="color: #27272a; font-weight: 400"
           >
-            Unsubscribe me from furthur alerts
+            Unsubscribe me from further alerts
           </a>
         </mj-text>
       </mj-column>
