--- a/adb/index.mjml
+++ b/adb/index.mjml
@@ -41,7 +41,7 @@
         <mj-image
           alt=""
           href="https://www.halo.co.in/"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/nmims/assets/signup-today.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/adb/assets/social-media.webp"
           padding="0"
         />
       </mj-column>
