--- a/adb/index.mjml
+++ b/adb/index.mjml
@@ -40,7 +40,7 @@
       <mj-column>
         <mj-image
           alt=""
-          href="https://www.halo.co.in/"
+          href="https://www.advogadosdosbrasileiros.com/"
           src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/adb/assets/social-media.webp"
           padding="0"
         />
