--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -74,7 +74,7 @@
     <!-- How To Build The Best Service Listing -->
     <mj-section background-color="#F9FAFB">
       <mj-column>
-        <mj-text
+        <!-- <mj-text
           align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
@@ -84,10 +84,10 @@
           line-height="1.4"
         >
           How To Build The Best Service Listing
-        </mj-text>
+        </mj-text> -->
 
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/section-01.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/services.png"
           alt=""
           padding="24px"
         />
@@ -101,14 +101,9 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          When it comes to building your pet services, services with thorough
-          descriptions and stunning imagery get the most bookings. To add your
-          pet service to your profile, go to your dropdown profile menu and
-          click on your profile tab. Once on your profile page, you will see a
-          tab called "Services" this page is where you will create your very own
-          pet service listing. When setting your prices and building your
-          services, remember, services that stand out from the others will lead
-          to increased booking.
+          From Hamsters to Horses, Parrots to Pomeranians, and Deserts to
+          Rainforest, DigyPet is your one-stop-shop for pet care services,
+          networking, and education
         </mj-text>
       </mj-column>
     </mj-section>
