--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -124,7 +124,7 @@
       <mj-column>
         <mj-text
           align="center"
-          color="#FDE047"
+          color="#ffffff"
           font-family="Poppins, sans-serif"
           font-size="18px"
           font-weight="600"
@@ -135,9 +135,10 @@
         </mj-text>
 
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/section-02.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image7.png"
           alt=""
           padding="24px"
+          border-radius="10px"
         />
 
         <mj-text
