--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -131,7 +131,7 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          Import Your Reviews
+          Here at DigyPet Come meet Shannon Gordy
         </mj-text>
 
         <mj-image
@@ -150,18 +150,141 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          Do you already have reviews on Facebook or Rover? Get a head! Start by
-          importing your existing reviews today from your Facebook and Rover
-          accounts. Reviews are one of the biggest things pet parents look for
-          when deciding which service provider they want to hire.
-          <br /><br />
-          To import reviews simply click on your profile dropdown and click on
-          your profile tab. Once you are on your profile page, you will see a
-          tab called "Reviews", and on this page, you can easily import your
-          existing reviews from Facebook and Rover.
+          Imagine having your pup turned into something this beautiful?
+        </mj-text>
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image8.png"
+          alt=""
+          padding="24px"
+          border-radius="10px"
+        />
+
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          I wanted to share with you some more really cool creative pet services
+          we offer at Digypet! We are proud to be called the unique pet service
+          place with hundreds of common and unique pet services. Below are some
+          of our favorite pet artist that can turn your pup into a beautiful Pet
+          Portrait, Pet Caricatures, Pet Comic book and much much more!
         </mj-text>
       </mj-column>
     </mj-section>
+
+    <!-- ----- -->
+
+    <!-- divider 01 -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/divider-01.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- How To Build The Best Service Listing -->
+    <mj-section background-color="#F9FAFB">
+      <mj-column>
+        <!-- <mj-text
+          align="center"
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="18px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          How To Build The Best Service Listing
+        </mj-text> -->
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/services.png"
+          alt=""
+          padding="24px"
+        />
+
+        <mj-text
+          align="center"
+          color="#27272A"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          I wanted to share with you some more really cool creative pet services
+          we offer at Digypet! We are proud to be called the unique pet service
+          place with hundreds of common and unique pet services. Below are some
+          of our favorite pet artist that can turn your pup into a beautiful Pet
+          Portrait, Pet Caricatures, Pet Comic book and much much more!
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+    <!-- divider 02 -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/divider-02.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- Import Your Reviews -->
+    <mj-section background-color="#0EA5E9">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#ffffff"
+          font-family="Poppins, sans-serif"
+          font-size="18px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Here at DigyPet Come meet Shannon Gordy
+        </mj-text>
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image7.png"
+          alt=""
+          padding="24px"
+          border-radius="10px"
+        />
+
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Imagine having your pup turned into something this beautiful?
+        </mj-text>
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image8.png"
+          alt=""
+          padding="24px"
+          border-radius="10px"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- ----- -->
 
     <!-- divider 01 -->
     <mj-section background-color="#F9FAFB" padding="0">
