--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -194,7 +194,7 @@
     <!-- How To Build The Best Service Listing -->
     <mj-section background-color="#F9FAFB">
       <mj-column>
-        <!-- <mj-text
+        <mj-text
           align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
@@ -203,11 +203,11 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          How To Build The Best Service Listing
-        </mj-text> -->
+          Come meet Ashely April
+        </mj-text>
 
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/services.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image9.png"
           alt=""
           padding="24px"
         />
@@ -221,11 +221,9 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          I wanted to share with you some more really cool creative pet services
-          we offer at Digypet! We are proud to be called the unique pet service
-          place with hundreds of common and unique pet services. Below are some
-          of our favorite pet artist that can turn your pup into a beautiful Pet
-          Portrait, Pet Caricatures, Pet Comic book and much much more!
+          Maybe you have a cool story to tell? Have you ever thought about
+          having your pet made into a comic? How cool would it be to have a
+          whole cinematic universe made around your pup?
         </mj-text>
       </mj-column>
     </mj-section>
@@ -253,11 +251,11 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          Here at DigyPet Come meet Shannon Gordy
+          Come Meet Geo Brawn
         </mj-text>
 
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image7.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image10.png"
           alt=""
           padding="24px"
           border-radius="10px"
@@ -272,11 +270,39 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          Imagine having your pup turned into something this beautiful?
+          Here at DigyPet, We got you covered on hundreds of creative pet
+          services!
         </mj-text>
 
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image8.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image11.png"
+          alt=""
+          padding="24px"
+          border-radius="10px"
+        />
+
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          From Hamsters to Horses, Parrots to Pomeranians, and Deserts to
+          Rainforest, DigyPet is your one-stop-shop for pet care services,
+          networking, and education. With DigyPet, you can:
+          <br /><br />
+          Connect with your tribe, share moments, set up groups, plan events,
+          raise funds, as well as access hundreds of common, innovative, and
+          unique services like walking, sitting, training, grooming, habitat
+          design, beekeeping, backyard gardening, pet photography, and much much
+          more.
+        </mj-text>
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/image12.png"
           alt=""
           padding="24px"
           border-radius="10px"
