--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -24,7 +24,7 @@
       <mj-column>
         <mj-image
           alt=""
-          href="https://www.digypet.com/categories"
+          href="https://www.digypet.com/services"
           src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/newhero.png"
           padding="0"
         />
